# OpenGL

./: CMakeLists.txt  main.cpp
Depends/glew/: glew.pc
